[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Menu/MenuClick.wav" type="AudioStream" id=1]
[ext_resource path="res://Src/AudioPlayer/AudioPlayer.gd" type="Script" id=2]
[ext_resource path="res://Assets/SFX/gameover.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/SFX/minigame_fail2.wav" type="AudioStream" id=15]
[ext_resource path="res://Assets/SFX/chest_bounty.wav" type="AudioStream" id=16]
[ext_resource path="res://Assets/SFX/door_wood_open.wav" type="AudioStream" id=24]
[ext_resource path="res://Assets/SFX/door_wood_close.wav" type="AudioStream" id=25]
[ext_resource path="res://Assets/SFX/door_metal_open2.wav" type="AudioStream" id=26]
[ext_resource path="res://Assets/SFX/door_metal_close2.wav" type="AudioStream" id=27]
[ext_resource path="res://Assets/SFX/car_close.wav" type="AudioStream" id=30]
[ext_resource path="res://Assets/SFX/car_open.wav" type="AudioStream" id=31]
[ext_resource path="res://Assets/SFX/minigame_victory.wav" type="AudioStream" id=32]
[ext_resource path="res://Assets/SFX/key_pickup.wav" type="AudioStream" id=63]
[ext_resource path="res://Assets/SFX/insert_key.wav" type="AudioStream" id=69]

[node name="AudioPlayer" type="Node2D"]
script = ExtResource( 2 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -16.0
bus = "Music"

[node name="MinigameSounds" type="Node2D" parent="."]

[node name="MinigameFail" type="AudioStreamPlayer" parent="MinigameSounds"]
stream = ExtResource( 15 )
bus = "Sound"

[node name="MinigameSuccess" type="AudioStreamPlayer" parent="MinigameSounds"]
stream = ExtResource( 32 )
bus = "Sound"

[node name="DoorSounds" type="Node2D" parent="."]

[node name="WoodenOpen" type="AudioStreamPlayer2D" parent="DoorSounds"]
stream = ExtResource( 24 )
attenuation = 2.0
bus = "Sound"

[node name="WoodenClose" type="AudioStreamPlayer2D" parent="DoorSounds"]
stream = ExtResource( 25 )
attenuation = 2.0
bus = "Sound"

[node name="MetalOpen" type="AudioStreamPlayer2D" parent="DoorSounds"]
stream = ExtResource( 26 )
attenuation = 2.0
bus = "Sound"

[node name="MetalClose" type="AudioStreamPlayer2D" parent="DoorSounds"]
stream = ExtResource( 27 )
attenuation = 2.0
bus = "Sound"

[node name="ObjectSounds" type="Node2D" parent="."]

[node name="CarOpen" type="AudioStreamPlayer" parent="ObjectSounds"]
stream = ExtResource( 31 )
bus = "Sound"

[node name="CarClose" type="AudioStreamPlayer" parent="ObjectSounds"]
stream = ExtResource( 30 )
bus = "Sound"

[node name="Key" type="Node2D" parent="."]

[node name="KeyPickup" type="AudioStreamPlayer" parent="Key"]
stream = ExtResource( 63 )
bus = "Sound"

[node name="KeyUse" type="AudioStreamPlayer2D" parent="Key"]
stream = ExtResource( 69 )
attenuation = 2.0
bus = "Sound"

[node name="Chest_Bounty" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 16 )
attenuation = 2.0
bus = "Sound"

[node name="General" type="Node2D" parent="."]

[node name="GameOver" type="AudioStreamPlayer" parent="General"]
stream = ExtResource( 3 )
bus = "Sound"
